--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				</colgroup>
 				<tbody>
 			
-					<tr class="Row-Column-4">
+					<tr class="Row-Column-4 toprow">
 						<td class="Question" colspan="9">
 							<p class="Question" xml:lang="uk-UA">1. ПРЕЗИДЕНТСЬКІ ВИБОРИ 25 ТРАВНЯ ВІДБУДУТЬСЯ:</p>
 						</td>
